# serializer version: 1
# name: test_replace_rich_text_tokens_replaces_code_block_with_info
  '''
  
  <div class="rich-text-code" misago-rich-text-code>
    <div class="rich-text-code-header">
      <div class="rich-text-code-info">
        
          Example string
        
      </div>
      
        <button
          type="button"
          class="rich-text-code-copy-btn d-js-block"
        >
          Copy
        </button>
      
    </div>
    <pre><code>Hello world!</code></pre>
  </div>
  '''
# ---
# name: test_replace_rich_text_tokens_replaces_code_block_with_info_and_syntax
  '''
  
  <div class="rich-text-code" misago-rich-text-code>
    <div class="rich-text-code-header">
      <div class="rich-text-code-info">
        
          Example string
        
      </div>
      
        <button
          type="button"
          class="rich-text-code-copy-btn d-js-block"
        >
          Copy
        </button>
      
    </div>
    <pre><code>Hello world!</code></pre>
  </div>
  '''
# ---
# name: test_replace_rich_text_tokens_replaces_code_block_with_syntax
  '''
  
  <div class="rich-text-code" misago-rich-text-code>
    <div class="rich-text-code-header">
      <div class="rich-text-code-info">
        
          Code
        
      </div>
      
        <button
          type="button"
          class="rich-text-code-copy-btn d-js-block"
        >
          Copy
        </button>
      
    </div>
    <pre><code>Hello world!</code></pre>
  </div>
  '''
# ---
# name: test_replace_rich_text_tokens_replaces_minimal_code_block
  '''
  
  <div class="rich-text-code" misago-rich-text-code>
    <div class="rich-text-code-header">
      <div class="rich-text-code-info">
        
          Code
        
      </div>
      
        <button
          type="button"
          class="rich-text-code-copy-btn d-js-block"
        >
          Copy
        </button>
      
    </div>
    <pre><code>Hello world!</code></pre>
  </div>
  '''
# ---
# name: test_replace_rich_text_tokens_replaces_spoiler
  '''
  
  <details class="rich-text-spoiler">
    <summary class="rich-text-spoiler-header">
      <div class="rich-text-spoiler-info">
        Hidden message
      </div>
      <div class="rich-text-spoiler-toggle">
        toggle
      </div>
    </summary>
    <div class="rich-text-spoiler-body">
      
  <p>Hello world!</p>
  
    </div>
  </details>
  
  '''
# ---
# name: test_replace_rich_text_tokens_replaces_spoiler_with_custom_info
  '''
  
  <details class="rich-text-spoiler">
    <summary class="rich-text-spoiler-header">
      <div class="rich-text-spoiler-info">
        Lorem ipsum
      </div>
      <div class="rich-text-spoiler-toggle">
        toggle
      </div>
    </summary>
    <div class="rich-text-spoiler-body">
      
  <p>Hello world!</p>
  
    </div>
  </details>
  
  '''
# ---
